@@ -1,9 +1,5 @@
 - Document z3c.pt
 
-- Spaces in project names (allow for separate project / package names?)
-
-- Subpath and view name in request
-
 - WebOb Request basics
 
 - "push" style templating
@@ -15,3 +11,6 @@
 - Show usage of, e.g. HTTPFound(location=url).
 
 - Document ``make_app`` better; particularly how zcml is found.
+
+- What is ``global_conf`` passed to the app constructor?  How is it
+  composed?
